syntax = "proto3";

package api.warehouse.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/warehouse/v1;warehousev1";

// WarehouseService Warehouse服务服务定义。
service WarehouseService {
// CreateWarehouse 创建仓库。
  rpc CreateWarehouse(CreateWarehouseRequest) returns (CreateWarehouseResponse);
// ListWarehouses 处理列出Warehouses请求。
  rpc ListWarehouses(ListWarehousesRequest) returns (ListWarehousesResponse);

// UpdateStock 更新Stock。
  rpc UpdateStock(UpdateStockRequest) returns (google.protobuf.Empty);
// GetStock 处理获取Stock请求。
  rpc GetStock(GetStockRequest) returns (GetStockResponse);

// CreateTransfer 创建Transfer。
  rpc CreateTransfer(CreateTransferRequest) returns (CreateTransferResponse);
// CompleteTransfer 处理CompleteTransfer请求。
  rpc CompleteTransfer(CompleteTransferRequest) returns (google.protobuf.Empty);

// DeductStock DeductStock接口。
  rpc DeductStock(DeductStockRequest) returns (google.protobuf.Empty);
// RevertStock 处理RevertStock请求。
  rpc RevertStock(RevertStockRequest) returns (google.protobuf.Empty);
}

// Warehouse Warehouse消息结构。
message Warehouse {
  uint64 id = 1; // 唯一标识
  string code = 2; // 代码
  string name = 3; // 名称
  string warehouse_type = 4; // warehouse类型
  string province = 5; // 省份
  string city = 6; // 城市
  string district = 7; // 区县
  string address = 8; // 地址
  double longitude = 9; // 经度
  double latitude = 10; // 纬度
  string contact_name = 11; // contact名称
  string contact_phone = 12; // contact电话
  int32 priority = 13; // 优先级
  string status = 14; // 状态
  int64 capacity = 15; // 容量
  string description = 16; // 描述
  google.protobuf.Timestamp created_at = 17; // 创建时间
  google.protobuf.Timestamp updated_at = 18; // 更新时间
}

// WarehouseStock WarehouseStock消息结构。
message WarehouseStock {
  uint64 id = 1; // 唯一标识
  uint64 warehouse_id = 2; // 仓库ID
  uint64 sku_id = 3; // 库存单元唯一标识
  int32 stock = 4; // 库存
  int32 locked_stock = 5; // 锁定库存
  int32 safe_stock = 6; // 安全库存
  int32 max_stock = 7; // 最大stock
  google.protobuf.Timestamp created_at = 8; // 创建时间
  google.protobuf.Timestamp updated_at = 9; // 更新时间
}

// StockTransfer StockTransfer消息结构。
message StockTransfer {
  uint64 id = 1; // 唯一标识
  string transfer_no = 2; // 转移no
  uint64 from_warehouse_id = 3; // 从warehouseid
  uint64 to_warehouse_id = 4; // 去warehouseid
  uint64 sku_id = 5; // 库存单元唯一标识
  int32 quantity = 6; // 数量
  string status = 7; // 状态
  string reason = 8; // 原因
  uint64 approved_by = 9; // approved被
  google.protobuf.Timestamp approved_at = 10; // approved在
  google.protobuf.Timestamp shipped_at = 11; // shipped在
  google.protobuf.Timestamp received_at = 12; // received在
  google.protobuf.Timestamp completed_at = 13; // completed在
  string remark = 14; // 备注
  uint64 created_by = 15; // created被
  google.protobuf.Timestamp created_at = 16; // 创建时间
  google.protobuf.Timestamp updated_at = 17; // 更新时间
}

// CreateWarehouseRequest 创建Warehouse请求消息结构。
message CreateWarehouseRequest {
  string code = 1; // 代码
  string name = 2; // 名称
}

// CreateWarehouseResponse 创建Warehouse响应消息结构。
message CreateWarehouseResponse {
  Warehouse warehouse = 1; // 仓库
}

// ListWarehousesRequest 列出Warehouses请求消息结构。
message ListWarehousesRequest {
  int32 page = 1; // 页码
  int32 page_size = 2; // 页码大小
}

// ListWarehousesResponse 列出Warehouses响应消息结构。
message ListWarehousesResponse {
  repeated Warehouse warehouses = 1; // 仓库列表
  int64 total_count = 2; // 总数计数
}

// UpdateStockRequest 更新Stock请求消息结构。
message UpdateStockRequest {
  uint64 warehouse_id = 1; // 仓库ID
  uint64 sku_id = 2; // 库存单元唯一标识
  int32 quantity = 3; // 数量 (扣减时可为负数)
}

// GetStockRequest 获取Stock请求消息结构。
message GetStockRequest {
  uint64 warehouse_id = 1; // 仓库ID
  uint64 sku_id = 2; // 库存单元唯一标识
}

// GetStockResponse 获取Stock响应消息结构。
message GetStockResponse {
  WarehouseStock stock = 1; // 库存
}

// CreateTransferRequest 创建Transfer请求消息结构。
message CreateTransferRequest {
  uint64 from_warehouse_id = 1; // 从warehouseid
  uint64 to_warehouse_id = 2; // 去warehouseid
  uint64 sku_id = 3; // 库存单元唯一标识
  int32 quantity = 4; // 数量
  uint64 created_by = 5; // created被
}

// CreateTransferResponse 创建Transfer响应消息结构。
message CreateTransferResponse {
  StockTransfer transfer = 1; // 转移
}

// CompleteTransferRequest CompleteTransfer请求消息结构。
message CompleteTransferRequest {
  uint64 transfer_id = 1; // 转移ID
}

// DeductStockRequest DeductStock请求消息结构。
message DeductStockRequest {
  uint64 order_id = 1; // 订单唯一标识
  uint64 sku_id = 2; // 库存单元唯一标识
  int32 quantity = 3; // 数量
  uint64 warehouse_id = 4; // 仓库ID
}

// RevertStockRequest RevertStock请求消息结构。
message RevertStockRequest {
  uint64 order_id = 1; // 订单唯一标识
  uint64 sku_id = 2; // 库存单元唯一标识
  int32 quantity = 3; // 数量
  uint64 warehouse_id = 4; // 仓库ID
}
